syntax = "proto3";

option csharp_namespace = "GrpcShared";
package Procurement;

service Procurement {
  rpc LoginUserToApplication (GRPCLoginUser) returns (GRPCLoggedUser);
  rpc RegisterUser (GRPCRegisterNewUser) returns (GRPCValidationResponse);
  rpc GetUserData (GRPCLoginInformationForUser) returns (GRPCLoggedUser);
  rpc GetTeamsList (GRPCLoginInformationForUser) returns (GRPCTeamsList);
  rpc CreateNewTeam (GRPCCreateNewTeam) returns (GRPCValidationResponse);
  rpc JoinToTeam (GRPCJoinToTeam) returns (GRPCTeamValidationResponse);
  rpc GetSelectedTeam (GRPCGetSelectedTeamRequest) returns (GRPCSelectedTeamResponse);
}

message GRPCValidationResponse {
	bool successful = 1;
	string information = 2;
}

message GRPCLoginUser {
	string email = 1;
	string password = 2;
}

message GRPCCreateNewTeam {
	GRPCTeam team = 1;
	GRPCLoginInformationForUser user = 2;
}

message GRPCRegisterNewUser {
	string password = 1;
	string confirmPassword = 2;
	GRPCPerson person = 3;
}

message GRPCLoginInformationForUser{
	string id = 1;
	string username = 2;
	string password = 3;
}

message GRPCLoggedUser {
	GRPCUser user = 1;
	GRPCPerson person = 2;
	GRPCValidationResponse validationResponse = 3;
}

message GRPCUser {
	string Id = 1;
	string UserName = 2;
	string PasswordHash = 3;
	string SecurityStamp = 4;
	int32 PersonID = 5;
	bool PrivacyAgreed = 6;
	string PrivacyAgreedOn = 7;
	bool Disabled = 8;
	string CreatedOn = 9;
	string UpdatedOn = 10;
}

message GRPCPerson {
	int32 id = 1;
	string firstName = 2;
	string lastName = 3;
	string email = 4;
}

message GRPCTeamsList {
	repeated GRPCTeam teams = 1;
	GRPCValidationResponse validationResponse = 2;
}

message GRPCTeam {
	int32 id = 1;
	string teamName = 2;
	string descirption = 3;
	int32 status = 4;
	string teamJoinCode = 5;
	string teamJoinPassword = 6;
	int32 createdById = 7;
	string createdOn = 8;
	int32 updatedById = 9;
	string updatedOn = 10;
}

message GRPCJoinToTeam {
	string teamJoinCode = 1;
	string teamJoinPassword = 2;
	GRPCLoginInformationForUser user = 3;
}

message GRPCTeamValidationResponse {
	GRPCValidationResponse response = 1;
	GRPCTeam team = 2;
}

message GRPCGetSelectedTeamRequest {
	GRPCLoginInformationForUser loggedUser = 1;
	int32 teamId = 2;
}

message GRPCSelectedTeamResponse {
	int32 id = 1;
	string teamName = 2;
	string descirption = 3;
	int32 status = 4;
	int32 role = 5;
	GRPCValidationResponse response = 6;
}